Fix layout bug

--- a/src/ui/styles/main.scss
+++ b/src/ui/styles/main.scss
@@ -23,4 +23,6 @@ body {
 
 #app {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
